[gd_scene load_steps=11 format=3 uid="uid://c4w8s0jwpen8a"]

[ext_resource type="TileSet" uid="uid://oid3mad24aji" path="res://Levels/tilemapwhite.tres" id="1_onl5i"]
[ext_resource type="Script" path="res://Levels/level.gd" id="1_vtri3"]
[ext_resource type="PackedScene" uid="uid://bxurph16m1826" path="res://Player/player.tscn" id="2_4dlxn"]
[ext_resource type="PackedScene" uid="uid://brkfvbi0ebbp5" path="res://Levels/game_camera.tscn" id="2_dy47u"]
[ext_resource type="TileSet" uid="uid://ch7wf05mr1l85" path="res://Levels/tilemapblue.tres" id="2_f40yh"]
[ext_resource type="PackedScene" uid="uid://bb1hgjhwn0d81" path="res://Levels/diamond.tscn" id="6_mpge5"]
[ext_resource type="PackedScene" uid="uid://cx5ekubs7wmm3" path="res://Levels/spawn_point.tscn" id="8_o4n8y"]
[ext_resource type="PackedScene" uid="uid://c2egxttv8ba23" path="res://Levels/exit_door.tscn" id="8_rehrj"]
[ext_resource type="PackedScene" uid="uid://c5oubomrg0noi" path="res://Levels/level02.tscn" id="9_q8e0h"]
[ext_resource type="PackedScene" uid="uid://cm35j6jsq14nh" path="res://Characters/quest_giver.tscn" id="10_gdi1d"]

[node name="Level" type="Node2D"]
script = ExtResource("1_vtri3")
player_scene = ExtResource("2_4dlxn")

[node name="SpawnTimer" type="Timer" parent="."]
one_shot = true

[node name="GameCamera" parent="." instance=ExtResource("2_dy47u")]
position = Vector2(200, 184)
limit_left = 0
limit_right = 448
limit_bottom = 240

[node name="TileMapWhite" type="TileMap" parent="."]
tile_set = ExtResource("1_onl5i")
format = 2
layer_0/tile_data = PackedInt32Array(851969, 720896, 14, 786433, 720896, 14, 720897, 720896, 6, 655361, 786432, 14, 589825, 786432, 14, 524289, 786432, 14, 851968, 720896, 6, 786432, 720896, 6, 720896, 720896, 14, 655360, 720896, 6, 589824, 720896, 6, 524288, 720896, 6, 917503, 720896, 14, 851967, 720896, 6, 786431, 720896, 6, 720895, 720896, 6, 655359, 655360, 14, 589823, 655360, 14, 983041, 720896, 6, 917505, 720896, 6, 983040, 720896, 6, 917504, 720896, 6, 1048575, 720896, 6, 983039, 720896, 14, 1048574, 720896, 6, 983038, 720896, 6, 917502, 720896, 6, 851966, 720896, 6, 786430, 720896, 14, 1048573, 720896, 6, 983037, 720896, 6, 917501, 655360, 14, 851965, 655360, 14, 786429, 655360, 14, 720894, 720896, 13, 720893, 655360, 13, 983047, 720896, 6, 917511, 720896, 6, 851975, 720896, 6, 786439, 720896, 6, 720903, 786432, 13, 983046, 720896, 14, 917510, 720896, 14, 851974, 720896, 6, 786438, 720896, 6, 720902, 720896, 13, 983045, 720896, 6, 917509, 720896, 6, 851973, 720896, 14, 786437, 720896, 6, 720901, 720896, 13, 983044, 720896, 14, 917508, 720896, 6, 851972, 720896, 6, 786436, 720896, 6, 720900, 720896, 13, 983043, 720896, 6, 917507, 720896, 14, 851971, 720896, 6, 786435, 720896, 14, 720899, 720896, 13, 983042, 720896, 6, 917506, 720896, 6, 851970, 720896, 6, 786434, 720896, 6, 720898, 720896, 13, 458753, 786432, 14, 393217, 786432, 14, 327681, 786432, 13, 458752, 720896, 14, 393216, 720896, 6, 327680, 720896, 6, 262144, 786432, 13, 524287, 655360, 14, 458751, 655360, 14, 393215, 655360, 14, 327679, 655360, 13, 983054, 720896, 6, 917518, 720896, 6, 851982, 720896, 6, 786446, 720896, 14, 983053, 720896, 14, 917517, 720896, 14, 851981, 720896, 6, 786445, 720896, 6, 983052, 720896, 14, 917516, 720896, 6, 851980, 720896, 6, 786444, 720896, 6, 983051, 720896, 6, 917515, 720896, 6, 851979, 720896, 6, 786443, 720896, 13, 983050, 720896, 6, 917514, 720896, 6, 851978, 720896, 6, 786442, 720896, 13, 983049, 720896, 6, 917513, 720896, 6, 851977, 720896, 6, 786441, 720896, 13, 983048, 720896, 6, 917512, 720896, 6, 851976, 720896, 6, 786440, 720896, 13, 1114126, 720896, 15, 1048590, 720896, 6, 1114125, 720896, 15, 1048589, 720896, 6, 1114124, 720896, 15, 1048588, 720896, 14, 1114123, 720896, 15, 1048587, 720896, 6, 1114122, 720896, 15, 1048586, 720896, 6, 1114121, 720896, 15, 1048585, 720896, 6, 1114120, 720896, 15, 1048584, 720896, 6, 1114119, 720896, 15, 1048583, 720896, 6, 1114118, 720896, 15, 1048582, 720896, 6, 1114117, 720896, 15, 1048581, 720896, 6, 1114116, 720896, 15, 1048580, 720896, 14, 1114115, 720896, 15, 1048579, 720896, 6, 1114114, 720896, 15, 1048578, 720896, 6, 1114113, 720896, 15, 1048577, 720896, 6, 1114112, 720896, 15, 1048576, 720896, 6, 1179647, 720896, 15, 1114111, 720896, 6, 1179646, 720896, 15, 1114110, 720896, 6, 1179645, 720896, 15, 1114109, 720896, 6, 1179644, 655360, 15, 1114108, 655360, 14, 1048572, 655360, 14, 983036, 655360, 13, 720906, 1179648, 0, 655363, 1179648, 1, 1114137, 720896, 15, 1048601, 720896, 6, 983065, 720896, 14, 917529, 720896, 6, 851993, 720896, 6, 786457, 720896, 6, 1114136, 720896, 15, 1048600, 720896, 6, 983064, 720896, 6, 917528, 720896, 6, 851992, 720896, 6, 786456, 720896, 13, 1114135, 720896, 15, 1048599, 720896, 6, 983063, 720896, 6, 917527, 720896, 6, 851991, 720896, 6, 786455, 720896, 13, 1114134, 720896, 15, 1048598, 720896, 6, 983062, 720896, 6, 917526, 720896, 6, 851990, 720896, 6, 786454, 720896, 13, 1114133, 720896, 15, 1048597, 720896, 6, 983061, 720896, 14, 917525, 720896, 6, 851989, 720896, 6, 786453, 720896, 13, 1114132, 720896, 15, 1048596, 720896, 6, 983060, 720896, 6, 917524, 720896, 14, 851988, 720896, 6, 786452, 655360, 13, 1114131, 720896, 15, 1048595, 720896, 6, 983059, 720896, 6, 917523, 720896, 6, 1114130, 720896, 15, 1048594, 720896, 6, 983058, 720896, 6, 917522, 720896, 6, 1114129, 720896, 15, 1048593, 720896, 6, 983057, 720896, 14, 917521, 720896, 6, 851985, 720896, 14, 786449, 786432, 13, 1114128, 720896, 15, 1048592, 720896, 14, 983056, 720896, 6, 917520, 720896, 6, 851984, 720896, 6, 786448, 720896, 13, 1114127, 720896, 15, 1048591, 720896, 6, 983055, 720896, 6, 917519, 720896, 6, 851983, 720896, 14, 786447, 720896, 6, 720911, 786432, 14, 655375, 786432, 14, 589839, 786432, 13, 720910, 720896, 6, 655374, 655360, 14, 589838, 655360, 13, 1114144, 786432, 15, 1048608, 786432, 14, 983072, 786432, 14, 917536, 786432, 14, 852000, 786432, 14, 786464, 786432, 14, 720928, 786432, 14, 655392, 786432, 14, 589856, 786432, 14, 524320, 786432, 14, 458784, 786432, 14, 393248, 786432, 14, 327712, 786432, 14, 262176, 786432, 13, 1114143, 720896, 15, 1048607, 720896, 6, 983071, 720896, 6, 917535, 720896, 6, 851999, 720896, 6, 786463, 720896, 6, 720927, 720896, 6, 655391, 720896, 6, 589855, 720896, 6, 524319, 720896, 6, 458783, 720896, 6, 393247, 720896, 6, 327711, 720896, 6, 262175, 720896, 13, 1114142, 720896, 15, 1048606, 720896, 6, 983070, 720896, 6, 917534, 720896, 6, 851998, 720896, 14, 786462, 720896, 14, 720926, 720896, 6, 655390, 720896, 6, 589854, 720896, 6, 524318, 720896, 6, 458782, 720896, 6, 393246, 720896, 6, 327710, 720896, 6, 262174, 720896, 13, 1114141, 720896, 15, 1048605, 720896, 6, 983069, 720896, 6, 917533, 720896, 6, 851997, 720896, 6, 786461, 720896, 6, 720925, 720896, 6, 655389, 720896, 6, 589853, 720896, 6, 524317, 720896, 14, 458781, 720896, 14, 393245, 720896, 14, 327709, 720896, 6, 262173, 720896, 13, 1114140, 720896, 15, 1048604, 720896, 6, 983068, 720896, 14, 917532, 720896, 6, 851996, 720896, 14, 786460, 720896, 6, 720924, 720896, 14, 655388, 720896, 6, 589852, 720896, 6, 524316, 720896, 6, 458780, 720896, 6, 393244, 720896, 6, 327708, 720896, 14, 262172, 720896, 13, 1114139, 720896, 15, 1048603, 720896, 6, 983067, 720896, 6, 917531, 720896, 6, 851995, 720896, 14, 786459, 720896, 6, 720923, 720896, 14, 655387, 720896, 6, 589851, 720896, 6, 524315, 720896, 6, 458779, 720896, 6, 393243, 720896, 14, 327707, 720896, 6, 262171, 720896, 13, 1114138, 720896, 15, 1048602, 720896, 6, 983066, 720896, 6, 917530, 720896, 6, 851994, 720896, 6, 786458, 720896, 6, 720922, 720896, 6, 655386, 720896, 6, 589850, 720896, 6, 524314, 720896, 6, 458778, 720896, 6, 393242, 720896, 6, 327706, 720896, 6, 262170, 720896, 13, 720921, 655360, 14, 655385, 655360, 14, 589849, 655360, 14, 524313, 655360, 14, 458777, 655360, 14, 393241, 655360, 14, 327705, 655360, 14, 262169, 655360, 13, 720909, 720896, 13, 720908, 655360, 13, 851987, 720896, 13, 851986, 720896, 13, 720919, 917504, 4)

[node name="TileMapBlue" type="TileMap" parent="."]
modulate = Color(0, 1, 1, 1)
tile_set = ExtResource("2_f40yh")
format = 2

[node name="Diamond" parent="." instance=ExtResource("6_mpge5")]
position = Vector2(240, 136)

[node name="SpawnPoint" parent="." instance=ExtResource("8_o4n8y")]
position = Vector2(80, 168)

[node name="ExitDoor" parent="." instance=ExtResource("8_rehrj")]
position = Vector2(360, 184)
next_level = ExtResource("9_q8e0h")

[node name="QuestGiver" parent="." instance=ExtResource("10_gdi1d")]
position = Vector2(208, 176)

[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
